@@ -5,8 +5,10 @@ Version: 0.9.24 [2013-09-18]
 o DOCUMENTATION: Updated the 'Dynamic document creation using RSP'
   vignette with information on how to embedded image files as
   data URI into HTML and Markdown.
+o ROBUSTNESS: Now start() for HttpDaemon makes sure that the R.rsp package
+  is attached so that the Tcl HTTP daemon have access to its methods.
 o BUG FIX/WORKAROUND: For now, package attaches the 'R.oo' package.
-  This is needed due to what appears to be a bug in how R.oo 
+  This is needed due to what appears to be a bug in how R.oo
   finalizes Object:s assuming R.oo is/can be attached.  Until that
   is resolved, we make sure R.oo is attached.
 o BUG FIX: Two of the package vignettes assumed that the 'R.rsp'
